--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv "X-UA-Compatible" content="ie=edge">
+    <link rel="shorcut icon" type="image/logo.png" href="assets/images/logo.jpg">
     <link rel="stylesheet" href="css/main.css">
     <title>Bomb-it!</title>
 </head>
